# muuzika-rs

./: Cargo.toml  README.md
src/: app.rs  endpoints.rs  errors.rs  lib.rs  lobby.rs  main.rs  state.rs  websocket.rs
src/actors/: mod.rs
src/actors/player/: actor.rs  handlers.rs  messages.rs  mod.rs  structs.rs
src/actors/room/: actor.rs  handlers.rs  messages.rs  mod.rs  structs.rs
src/dtos/: common.rs  mod.rs  requests.rs  responses.rs
src/models/: mod.rs  player.rs  room.rs
src/room/: actor.rs  handlers.rs  messages.rs  mod.rs
src/services/: lobby.rs
src/spotify/: dtos.rs  fetcher.rs  handlers.rs  messages.rs  mod.rs
tests/: integration_tests.rs
