[package]
name = "muuzika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.40"
dashmap = "5.4.0"
env_logger = "0.10.0"

[package.metadata.infer]
serde = { rename_all = "camelCase" }
