[package]
name = "muuzika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.40"
dashmap = "5.4.0"
env_logger = "0.10.0"
actix-web-actors = "4.2.0"
actix = "0.13.0"
futures = "0.3.28"
log = "0.4.17"
serde_json = "1.0.96"
tokio = "1.28.0"
const_format = "0.2.30"
